k8s/user-apps/nextcloud/manifests/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels: &labels
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache-server
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: redis
          image: docker.io/redis
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: redis
