k8s/user-apps/nextcloud/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels: &labels
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
